# Smart-Library

./: README.md  index.html  main.py  package-lock.json  pyproject.toml  script.js  styles.css
app/Books/: books_crud.py  books_model.py  books_router.py  books_schema.py
app/authors/: authors_crud.py  authors_model.py  authors_schema.py
app/common/config/: database.py
app/common/utils/: auth.py
app/llama/: books_cleaned.csv  intents.py  llm_crud.py  llm_router.py  model.py  streamlit.py  streamlitPREV.py  testintent.py
app/llama/chromadb/db9fd643-883f-43fc-8517-12c6a4cf8624/: index_metadata.pickle
app/llama/chromadb/fd562b62-b812-40bd-835f-3620da960a01/: index_metadata.pickle
app/user/: user_crud.py  user_model.py  user_router.py  user_schema.py
chromadb/: chroma.sqlite3
front-end/: package-lock.json  package.json  tsconfig.json  webpack.config.js
front-end/public/: index.html
front-end/src/: App.css  App.js  App.tsx
front-end/src/components/AdminPanel/: AdminPanel.css  AdminPanel.jsx  AdminPanel.module.css  AdminPanel.tsx
front-end/src/components/AuthBox/: AuthBox.css  AuthBox.jsx  AuthBox.module.css  AuthBox.tsx
front-end/src/components/AuthButton/: AuthButton.css  AuthButton.jsx  AuthButton.module.css  AuthButton.tsx
front-end/src/components/BookCard/: BookCard.css  BookCard.jsx  BookCard.module.css  BookCard.tsx
front-end/src/components/ChatBot/: ChatBot.jsx  ChatBot.tsx  ChatBox.module.css
front-end/src/components/ChatModel/: ChatModel.css  ChatModel.jsx  ChatModel.module.css  ChatModel.tsx
(+21 files in other folders)
