[tool.poetry]
name = "smart-library"
version = "0.1.0"
description = ""
authors = ["anoudalysf <anoud-s-alyousef@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.3"
sqlalchemy = "^2.0.31"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
pyproject = "^1.3.1"
pre-commit = "^3.7.1"
fastapi = "^0.111.1"
langchain = "^0.2.10"
openai = "^1.37.0"
pandas = "^2.2.2"
langchain-community = "^0.2.9"
langchain-openai = "^0.1.17"
langchain-chroma = "^0.1.2"
sentence-transformers = "^3.0.1"
langchain-huggingface = "^0.0.3"
streamlit = "^1.36.0"
sse-starlette = "^2.1.2"
gpt4all = "^2.7.0"
bs4 = "^0.0.2"
langchain-ollama = "^0.1.0"
fastapi-cli = "^0.0.4"
langgraph = "^0.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
